<resources>
    <string name="app_name">Cafe Finder</string>
    <string name="lyrics">Lyrics</string>
    <string name="title_home">Home</string>
    <string name="title_cafe">Cafe</string>
    <string name="title_favorite">Favorite</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="goto_back">Back</string>
    <string name="song_name">Cafe</string>
    <string name="description">cafe description</string>
    <string name="nim">L0122094</string>
    <string name="nama_lengkap">Mochamad Faisal Akbar</string>
    <string name="nama">Nama</string>
    <string name="jurusan_angkatan">S1-Informatika/2022</string>
    <string name="fakultas">Fakultas Teknologi dan Sains Data</string>
    <string name="universitas">Universitas Sebelas Maret</string>
    <string name="isi_email">faisalzogg022@gmail.com</string>
    <string name="share_button">SHARE</string>
    <string name="description_app">CAFE FINDER APP</string>
    <string name="description_long_app">Cafe Finder \n Aplikasi ini memungkinkan pengguna untuk mencari kafe terdekat dan memberikan rating serta ulasan tentang kualitas makanan dan layanan di kafe tersebut.</string>
    <string name="rating">Submit Rating</string>
    <string name="sedang_hangat">Top Cafe</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="ready_to">Ready to begin your cafe journey?</string>
    <string name="your_cafe_count">Your Cafe Count</string>
    <string name="favorite_cafe">Favorite Cafe</string>
    <string name="favorite">favorite</string>
    <string name="location">Location</string>
    <string name="favorite_button_location">Lihat Lokasi</string>
    <string name="favorite_button_cafe">Lihat Cafe</string>
    <string name="favorite_button_delete">Delete</string>
    <string name="favorite_star_0">0</string>
    <string name="menu">Menu</string>
    <string name="todays_recommendations">Today\'s Recommendations</string>
    <string name="todays_recommendations_desc">Daily cafe recommendations, specially curated just for you</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="ratingdefault">0</string>
    <string name="namaCafe">TextView</string>
    <string name="kategori">TextView</string>
    <string name="ratingDefault">0</string>
</resources>