<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            style="@style/LayoutMatchWrap"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_home_background"
                style="@style/Logo"/>
            <TextView
                android:id="@+id/description_app"
                style="@style/TextViewHome"
                android:text="@string/description_app"
                android:gravity="center"
                android:layout_marginTop="250dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/description_long_app"
                android:text="@string/description_long_app"
                style="@style/TextViewHome"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/standing_name"
                style="@style/TextViewHome"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sedang_hangat"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/standing"
                android:layout_width="325dp"
                android:layout_height="390dp"
                android:layout_gravity="center"
                android:layout_marginBottom="110dp"
                android:gravity="center"
                android:src="@drawable/realityclub" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
